--- a/chat.html
+++ b/chat.html
@@ -226,7 +226,7 @@
     const currentUsername = "Pro";
     const currentColor = "#d1e7dd";
 
-    const token = "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";
+    const token = "";
     const gitUser = "Murgrip";
     const repo = "chat";
     const branch = "main";
